[package]
name = "fhf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
git2 = "0.18.3"
rayon = "1.10.0"
regex = "1.10.4"
walkdir = "2.5.0"
