[package]
name = "fhf"
version = "0.1.4"
edition = "2021"
repository = "https://github.com/bar9/fhf"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
git2 = "0.18.3"
rayon = "1.10.0"
regex = "1.10.4"
walkdir = "2.5.0"
openssl = { version = "0.10.66", features = ["vendored"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.19.1"
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu"]
# CI backends to support
ci = "github"
# Publish jobs to run in CI
pr-run-mode = "plan"
